--- a/styles.css
+++ b/styles.css
@@ -474,10 +474,11 @@ main {
     transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
-    z-index: 5;
+    z-index: 15;
     display: flex;
     align-items: center;
     justify-content: center;
+    pointer-events: none;
 }
 
 .state-image {
@@ -605,6 +606,7 @@ main {
     border-radius: 50%;
     border: 3px solid;
     transition: all var(--transition-medium);
+    z-index: 1;
 }
 
 .state-depressive .pulse-circle {
@@ -1097,7 +1099,7 @@ main {
     border-radius: 50%;
     border: 2px solid;
     opacity: 0.6;
-    z-index: 1;
+    z-index: 2;
 }
 
 .breath-inner {
