--- a/styles.css
+++ b/styles.css
@@ -466,6 +466,7 @@ main {
     opacity: 1;
     transform: translateX(0) scale(1);
     z-index: 2;
+    display: block !important;
     animation: floatImage 6s ease-in-out infinite;
 }
 
